load("@rules_cc//cc:defs.bzl", "cc_library")
load("//bazel:copts.bzl", "copts")

package(default_visibility = ["//ecsact_rt_entt/rt_entt_codegen:__subpackages__"])

cc_library(
    name = "ecsact_entt_details",
    srcs = ["ecsact_entt_details.cc"],
    hdrs = ["ecsact_entt_details.hh"],
    copts = copts,
    defines = ["ECSACT_META_API_LOAD_AT_RUNTIME"],
    strip_include_prefix = "/ecsact_rt_entt",
    deps = [
        "//ecsact_codegen:plugin",
        "//ecsact_lang_cpp:support",
        "//ecsact_runtime:common",
        "//ecsact_runtime:meta",
    ],
)

cc_library(
    name = "sorting",
    srcs = ["sorting.cc"],
    hdrs = ["sorting.hh"],
    copts = copts,
    strip_include_prefix = "/ecsact_rt_entt",
    deps = [
        ":ecsact_entt_details",
        "//ecsact_runtime:common",
        "//ecsact_runtime:meta",
    ],
)

cc_library(
    name = "util",
    srcs = ["util.cc"],
    hdrs = ["util.hh"],
    copts = copts,
    defines = ["ECSACT_META_API_LOAD_AT_RUNTIME"],
    strip_include_prefix = "/ecsact_rt_entt",
    deps = [
        ":comps_with_caps",
        "//ecsact_codegen:plugin",
        "//ecsact_lang_cpp:support",
        "//ecsact_runtime:common",
        "//ecsact_runtime:meta",
    ],
)

cc_library(
    name = "comps_with_caps",
    hdrs = ["comps_with_caps.hh"],
    copts = copts,
    strip_include_prefix = "/ecsact_rt_entt",
    deps = [
        ":ecsact_entt_details",
        "//ecsact_runtime:common",
        "//ecsact_runtime:meta",
    ],
)

cc_library(
    name = "system_util",
    srcs = ["system_util.cc"],
    hdrs = ["system_util.hh"],
    copts = copts,
    strip_include_prefix = "/ecsact_rt_entt",
    deps = [
        ":ecsact_entt_details",
        ":util",
        "//ecsact_codegen:plugin",
        "//ecsact_lang_cpp:cpp_codegen_plugin_util",
        "//ecsact_lang_cpp:support",
        "//ecsact_runtime:meta",
        "//ecsact_rt_entt/rt_entt_codegen/core/sys_exec",
    ],
)

cc_library(
    name = "parallel",
    srcs = ["parallel.cc"],
    hdrs = ["parallel.hh"],
    copts = copts,
    strip_include_prefix = "/ecsact_rt_entt",
    deps = [
        ":ecsact_entt_details",
        "//ecsact_lang_cpp:cpp_codegen_plugin_util",
        "//ecsact_rt_entt/rt_entt_codegen/shared:system_variant",
    ],
)

cc_library(
    name = "system_variant",
    hdrs = ["system_variant.hh"],
    copts = copts,
    strip_include_prefix = "/ecsact_rt_entt",
    deps = [
        "//ecsact_runtime:common",
    ],
)
