load("@rules_cc//cc:defs.bzl", "cc_library")
load("//bazel:copts.bzl", "copts")

package(default_visibility = ["//:__subpackages__"])

cc_library(
    name = "command",
    hdrs = ["command.hh"],
    copts = copts,
    strip_include_prefix = "/ecsact_cli",
)

# cc_library(
# strip_include_prefix = "/ecsact_cli",
#     name = "benchmark",
#     srcs = ["benchmark.cc"],
#     hdrs = ["benchmark.hh"],
#     copts = copts,
#     deps = [
#         ":command",
#         "//ecsact_cli/ecsact/cli/detail/executable_path",
#         "@magic_enum",
#         "@docoptexpr",
#         "@boost.dll",
#         "//ecsact_runtime:core",
#         "//ecsact_runtime:async",
#         "//ecsact_runtime:serialize",
#         "@ecsact_si_wasm",
#         "@nlohmann_json//:json",
#     ],
# )

cc_library(
    name = "common",
    srcs = ["common.cc"],
    hdrs = ["common.hh"],
    copts = copts,
    strip_include_prefix = "/ecsact_cli",
    deps = [
        "//ecsact_cli/ecsact/cli:report",
        "//ecsact_cli/ecsact/cli:report_message",
        "//ecsact_cli/ecsact/cli/detail:json_report",
        "//ecsact_cli/ecsact/cli/detail:text_report",
        "@docoptexpr",
    ],
)

cc_library(
    name = "codegen",
    srcs = ["codegen.cc"],
    hdrs = ["codegen.hh"],
    copts = copts,
    strip_include_prefix = "/ecsact_cli",
    deps = [
        ":command",
        ":common",
        "//ecsact_cli/ecsact/cli/commands/codegen",
        "//ecsact_codegen:plugin",
        "//ecsact_codegen:plugin_validate",
        "//ecsact_interpret",
        "//ecsact_runtime:dylib",
        "//ecsact_runtime:meta",
        "@boost.dll",
        "@docoptexpr",
        "@magic_enum",
    ],
)

cc_library(
    name = "config",
    srcs = ["config.cc"],
    hdrs = ["config.hh"],
    copts = copts,
    strip_include_prefix = "/ecsact_cli",
    deps = [
        ":command",
        "//ecsact_cli/ecsact/cli/detail:argv0",
        "@docoptexpr",
        "@nlohmann_json//:json",
    ],
)
