load("@rules_cc//cc:defs.bzl", "cc_library")
load("//bazel:copts.bzl", "copts")

package(default_visibility = ["//:__subpackages__"])

cc_library(
    name = "argv0",
    srcs = ["argv0.cc"],
    hdrs = ["argv0.hh"],
    copts = copts,
    deps = [
        "//ecsact_cli/ecsact/cli/detail/executable_path",
    ],
)

cc_library(
    name = "archive",
    srcs = ["archive.cc"],
    hdrs = ["archive.hh"],
    copts = copts,
    deps = [
        "@libarchive//libarchive",
    ],
)

cc_library(
    name = "download",
    srcs = ["download.cc"],
    hdrs = ["download.hh"],
    copts = copts,
    deps = [
        ":proc_exec",
        "@boost.url",
        "@curl",
        "@magic_enum",
    ],
)

cc_library(
    name = "glob",
    srcs = ["glob.cc"],
    hdrs = ["glob.hh"],
    copts = copts,
)

cc_library(
    name = "json_report",
    srcs = ["json_report.cc"],
    hdrs = ["json_report.hh"],
    copts = copts,
    deps = [
        "//ecsact_cli/ecsact/cli:report_message",
        "@nlohmann_json//:json",
    ],
)

cc_library(
    name = "text_report",
    srcs = ["text_report.cc"],
    hdrs = ["text_report.hh"],
    copts = copts,
    deps = [
        "//ecsact_cli/ecsact/cli:report_message",
    ],
)

cc_library(
    name = "proc_exec",
    srcs = ["proc_exec.cc"],
    hdrs = ["proc_exec.hh"],
    copts = copts,
    deps = [
        "//ecsact_cli/ecsact/cli:report",
        "@boost.process",
    ],
)

cc_library(
    name = "long_path_workaround",
    srcs = ["long_path_workaround.cc"],
    hdrs = ["long_path_workaround.hh"],
    copts = copts,
)
